# appstore-insights

./: .gitignore  README.md  Visualizations_README.md  create_interactive_charts.py  generate_visualizations.py  pyproject.toml
app/: __init__.py  main.py  sources.py  textprep.py
app/api/: routes.py
app/core/: config.py  exceptions.py
app/models/: __init__.py  analyze.py  requests.py  responses.py  schemas.py
app/services/: app_service.py  insights_service.py  review_service.py  sentiment_service.py  text_service.py
app/utils/: helpers.py  validators.py
tests/test_api/: test_analyze.py
tests/test_services/: test_app_service.py
tests/test_utils/: test_validators.py
